arkts_static_test/02_LexicalElements/ets_cases/2.9.6_String_Literals/compile-pass/LEX_02_09_06_001_PASS_DOUBLE_QUOTE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_09_06_001_PASS_DOUBLE_QUOTE
 * @expect compile-pass
 * @section 2.9.6
 * @design 双引号字符串
 * @note compile-pass 用例：验证双引号字符串语法
 */

// 双引号字符串
let s1: string = "Hello, world!"
let s2: string = ""
let s3: string = "abc123"
let s4: string = "Hello, 世界!"
