arkts_static_test/02_LexicalElements/ets_cases/2.9.6_String_Literals/compile-fail/LEX_02_09_06_014_FAIL_ESCAPE_DIGIT_9.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_09_06_014_FAIL_ESCAPE_DIGIT_9
 * @expect compile-fail
 * @section 2.9.6
 * @design 字符串无效转义序列 \9 应编译失败
 * @note compile-fail 用例：补充范围边界 \9
 */
let s: string = "\9"
